--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Ka Blia Resume</title>
-    <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
+  
 </head>
 <body>
+  
+  <div style="background-image: url('https://media.istockphoto.com/photos/pastel-valentines-pale-pink-water-color-paper-texture-background-picture-id1150384201?k=20&m=1150384201&s=170667a&w=0&h=DOXJVGjX31l3MCjgc6bgV1XH_1akQiUqGl7W8oZxE7g=');">
+  
   <div> 
        <img src="https://pbs.twimg.com/profile_images/1311324991540133889/ACVNJwFr.jpg" />
     <h1>Ka Blia Vue</h1> 
-    <p>Optimistic, curious individual with a passion on continuing to learn and grow.</p>
+    <p>Optimistic and curious individual with a passion on continuing to learn and grow to be their best self and contribute back to the community.</p>
   </div>
   
   <div class="exp-header">
@@ -45,15 +49,22 @@
     
   </div> 
   
+  
   <div class="exp-header">
     <h3>Education</h3> 
   </div>
   
   <div> 
+    <div class="adjust-line-height">together and forever!
     <h5>Bachelor of Science - Social Work</h5>
     <h6>St. Catherine University, St. Paul - Completed May 2015</h6>
+    </div>
     
+    <h5>Master of Social Work</h5>
+    <h6>St. Catherine University, St. Paul - Completed May 2018</h6>
+   
   </div> 
+  
   
 </body>
 </html>
